# flutter_actix_websocket

client/: pubspec.yaml
client/lib/: main.dart
java_test_server/: Main.java  Makefile
python/: client.py  server.py
raw_dart/: main.dart
server/: Cargo.toml
server/src/: main.rs
web/: index.html
wireshark/: actix_server_dart_client.pcapng  actix_server_dart_client_no_compression.pcapng  actix_server_python_client.pcapng  python_server_dart_client.pcapng  python_server_python_client.pcapng  test_server_1_dart_client.pcapng  test_server_2_dart_client.pcapng
